@@ -18,7 +18,7 @@ setenv=
 
 
 deps=
-	dogpile.cache
+	dogpile.cache<1.0
 	pytest
 	mock
 	msgpack-python
